--- a/style.css
+++ b/style.css
@@ -227,4 +227,24 @@ nav a.active {
   border: none;
   font-size: 14px;
 }
+.deposit-box {
+  background: #fff;
+  padding: 15px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+
+.deposit-box input {
+  width: 100%;
+  margin: 10px 0;
+  padding: 10px;
+}
+
+#historicoDeposito li {
+  background: #f1f1f1;
+  margin-bottom: 8px;
+  padding: 8px;
+  border-radius: 6px;
+  font-size: 14px;
+}
 
